--- a/SpaceInvaders/View/MainPage.xaml
+++ b/SpaceInvaders/View/MainPage.xaml
@@ -7,6 +7,8 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+
     <Canvas x:Name="theCanvas" Width="640" Height="480" Background ="Black">
+        <TextBlock x:Name="scoreText" Text="Score: 0"/>
     </Canvas>
 </Page>
