--- a/SpaceInvaders/View/Sprites/BasicEnemySprite.xaml
+++ b/SpaceInvaders/View/Sprites/BasicEnemySprite.xaml
@@ -7,11 +7,31 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="32"
-    d:DesignWidth="48"
-    Width="48"
-    Height="32">
+    d:DesignWidth="27"
+    Height="32"
+    Width="27">
+
+    <UserControl.Resources>
+        <SolidColorBrush x:Key="BodyColor" Color="LightGray"/>
+        <SolidColorBrush x:Key="BorderColor" Color="Black"/>
+    </UserControl.Resources>
 
     <Canvas>
-        <Rectangle Width="48" Height="32" Fill="Aqua"/>
+        <Rectangle Width="15" Height="19" Canvas.Left="6" Canvas.Top="3" Fill="{StaticResource BodyColor}"/>
+        <Rectangle Width="12" Height="10" Fill="{StaticResource BodyColor}" Canvas.Top="0.125" RenderTransformOrigin="0.5,0.5" Canvas.Left="9.543" UseLayoutRounding="False" d:LayoutRounding="Auto">
+            <Rectangle.RenderTransform>
+                <CompositeTransform SkewX="-31.574" TranslateX="2.26"/>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Rectangle Width="14" Height="10" Fill="{StaticResource BodyColor}" Canvas.Top="0.501" RenderTransformOrigin="0.5,0.5" Canvas.Left="-1.8" UseLayoutRounding="False" d:LayoutRounding="Auto">
+            <Rectangle.RenderTransform>
+                <CompositeTransform SkewX="-39.094" TranslateX="4.507" Rotation="51" ScaleX="0.887" SkewY="8.934" TranslateY="0.002"/>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Ellipse Width="15" Height="19" Fill="{StaticResource BodyColor}" Canvas.Top="13" Canvas.Left="6"/>
+        <Ellipse Width="9" Height="17" Fill="{StaticResource BorderColor}" Canvas.Left="9" Canvas.Top="13"/>
+        <Ellipse Width="7" Height="16" Fill="Aqua" Canvas.Left="10" Canvas.Top="13"/>
+        <Rectangle Width="11" Height="11" Fill="{StaticResource BodyColor}" Canvas.Left="8" Canvas.Top="10"/>
+        <Rectangle Width="9" Height="1" Fill="{StaticResource BorderColor}" Canvas.Left="9" Canvas.Top="20"/>
     </Canvas>
 </local:BaseSprite>
