Give bullets ZIndex
Ensures that they render above ships

--- a/SpaceInvaders/View/Sprites/PlayerBulletSprite.xaml
+++ b/SpaceInvaders/View/Sprites/PlayerBulletSprite.xaml
@@ -11,7 +11,7 @@
     Width="8"
     Height="8">
 
-    <Canvas>
+    <Canvas ZIndex="1">
         <Rectangle Width="8" Height="8" Fill="White"/>
     </Canvas>
 </local:BaseSprite>
