--- a/SpaceInvaders/View/Sprites/TestBossSprite.xaml
+++ b/SpaceInvaders/View/Sprites/TestBossSprite.xaml
@@ -11,7 +11,5 @@
     Height="120"
     Width="180">
 
-    <Canvas Background="Aqua">
-    
-    </Canvas>
+    <Canvas Background="Aqua" />
 </local:BaseSprite>
