--- a/SpaceInvaders/View/MainPage.xaml
+++ b/SpaceInvaders/View/MainPage.xaml
@@ -9,6 +9,8 @@
 
 
     <Canvas x:Name="theCanvas" Width="640" Height="480" Background="Black">
-        <TextBlock x:Name="scoreText" Text="Score: 0" />
+        <Canvas x:Name="uiCanvas" ZIndex="5">
+            <TextBlock x:Name="scoreText" Text="Score: 0" FocusVisualPrimaryBrush="White"/>
+        </Canvas>
     </Canvas>
 </Page>
