--- a/SpaceInvaders/View/Sprites/Background/StarSprite.xaml
+++ b/SpaceInvaders/View/Sprites/Background/StarSprite.xaml
@@ -1,17 +1,18 @@
-﻿<local:BaseSprite
-    x:Class="SpaceInvaders.View.Sprites.PlayerBulletSprite"
+﻿<base:BaseSprite
+    x:Class="SpaceInvaders.View.Sprites.StarSprite"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SpaceInvaders.View.Sprites"
+    xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="8"
-    d:DesignWidth="8"
-    Width="8"
-    Height="8">
+    d:DesignHeight="4"
+    d:DesignWidth="4"
+    Height="4"
+    Width="4">
 
-    <Canvas ZIndex="1">
-        <Rectangle Width="8" Height="8" Fill="White" />
+    <Canvas ZIndex="-10">
+        <Ellipse Width="4" Height="4" Fill="#ffd" />
     </Canvas>
-</local:BaseSprite>
+</base:BaseSprite>
