--- a/SpaceInvaders/View/Sprites/Entities/Enemies/AggresiveEnemySprite.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/AggresiveEnemySprite.xaml
@@ -1,8 +1,9 @@
-﻿<local:BaseSprite
+﻿<base:BaseSprite
     x:Class="SpaceInvaders.View.Sprites.AggresiveEnemySprite"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SpaceInvaders.View.Sprites"
+    xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -22,4 +23,4 @@
         <Polygon Points="14,25 15,26 16,26 17,25 17,17 14,17"
                  Fill="{StaticResource BodyColor}" Stroke="{StaticResource BorderColor}" />
     </Canvas>
-</local:BaseSprite>
+</base:BaseSprite>
