--- a/SpaceInvaders/View/Sprites/Entities/Enemies/BasicEnemySprite.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/BasicEnemySprite.xaml
@@ -1,8 +1,9 @@
-﻿<local:BaseSprite
+﻿<base:BaseSprite
     x:Class="SpaceInvaders.View.Sprites.BasicEnemySprite"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SpaceInvaders.View.Sprites"
+    xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -38,4 +39,4 @@
         <Rectangle Width="11" Height="11" Fill="{StaticResource BodyColor}" Canvas.Left="8" Canvas.Top="10" />
         <Rectangle Width="9" Height="1" Fill="{StaticResource BorderColor}" Canvas.Left="9" Canvas.Top="20" />
     </Canvas>
-</local:BaseSprite>
+</base:BaseSprite>
