--- a/SpaceInvaders/View/Sprites/Entities/Enemies/IntermediateEnemySprite.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/IntermediateEnemySprite.xaml
@@ -1,8 +1,9 @@
-﻿<local:BaseSprite
+﻿<base:BaseSprite
     x:Class="SpaceInvaders.View.Sprites.IntermediateEnemySprite"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SpaceInvaders.View.Sprites"
+    xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -48,4 +49,4 @@
             </Rectangle.RenderTransform>
         </Rectangle>
     </Canvas>
-</local:BaseSprite>
+</base:BaseSprite>
