--- a/SpaceInvaders/View/Sprites/Entities/PlayerShipSprite.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/PlayerShipSprite.xaml
@@ -1,8 +1,9 @@
-﻿<local:BaseSprite
+﻿<base:BaseSprite
     x:Class="SpaceInvaders.View.Sprites.PlayerShipSprite"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SpaceInvaders.View.Sprites"
+    xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -23,4 +24,4 @@
         <Polygon Points="14,7 14,16 10,20 9,22 9,24 10,26 13,29 15,30 16,30 18,29 21,26 22,24 22,22 21,20 17,16 17,7"
                  Fill="{StaticResource BodyColor}" Stroke="{StaticResource OutlineColor}" />
     </Canvas>
-</local:BaseSprite>
+</base:BaseSprite>
