--- a/SpaceInvaders/View/Sprites/Entities/Enemies/TestBossSprite.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/TestBossSprite.xaml
@@ -1,5 +1,5 @@
 ﻿<base:BaseSprite
-    x:Class="SpaceInvaders.View.Sprites.TestBossSprite"
+    x:Class="SpaceInvaders.View.Sprites.Entities.Enemies.TestBossSprite"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SpaceInvaders.View.Sprites"
