--- a/SpaceInvaders/View/Sprites/Entities/Enemies/BasicEnemySpriteBase.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/BasicEnemySpriteBase.xaml
@@ -1,5 +1,5 @@
 ﻿<base:BaseSprite
-    x:Class="SpaceInvaders.View.Sprites.Entities.Enemies.BasicEnemySprite"
+    x:Class="SpaceInvaders.View.Sprites.Entities.Enemies.BasicEnemySpriteBase"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SpaceInvaders.View.Sprites.Entities.Enemies"
@@ -21,6 +21,5 @@
                  Points="14,4 11,0 0,0 6,10 6,23 8,29 10,31 14,32 18,31 20,29 22,23 22,10 27,0 17,0"/>
         <Polygon Fill="Aqua" Stroke="{StaticResource BorderColor}"
                  Points="10,21 10,23 11,26.5 12,28.25 13,29 14,29.5 15,29 16,28.25 17,26.5 18,23 18,21"/>
-        <local:BasicLightsDim Canvas.Left="8" Canvas.Top="10"/>
     </Canvas>
 </base:BaseSprite>
