--- a/SpaceInvaders/View/Sprites/Entities/Enemies/BasicAttachmentSprite.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/BasicAttachmentSprite.xaml
@@ -1,8 +1,7 @@
 ﻿<base:BaseSprite
-    x:Class="SpaceInvaders.View.Sprites.Entities.Enemies.IntermediateEnemySprite"
+    x:Class="SpaceInvaders.View.Sprites.Entities.Enemies.BasicAttachmentSprite"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SpaceInvaders.View.Sprites.Entities.Enemies"
     xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -22,6 +21,5 @@
                  Points="6,13 6,15 4,16 4,19 6,18 6,20 4,21 3.5,21.75 3,22 2,22 1.5,21.75 1,21 1,13 1.5,12.25 2,12 3,12 3.5,12.25 4,13 4,14"/>
         <Polygon Fill="{StaticResource BodyColor}" Stroke="{StaticResource OutlineColor}"
                  Points="22,13 22,15 24,16 24,19 22,18 22,20 24,21 24.5,21.75 25,22 26,22 26.5,21.75 27,21 27,13 26.5,12.25 26,12 25,12 24.5,12.25 24,13 24,14"/>
-        <local:BasicEnemySpriteBase />
     </Canvas>
 </base:BaseSprite>
