--- a/SpaceInvaders/View/Sprites/Entities/Enemies/AggresiveEnemySpriteBase.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/AggresiveEnemySpriteBase.xaml
@@ -1,5 +1,5 @@
 ﻿<base:BaseSprite
-    x:Class="SpaceInvaders.View.Sprites.Entities.Enemies.AggresiveEnemySprite"
+    x:Class="SpaceInvaders.View.Sprites.Entities.Enemies.AggresiveEnemySpriteBase"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:base="using:SpaceInvaders.View.Sprites"
@@ -14,6 +14,7 @@
     <UserControl.Resources>
         <SolidColorBrush x:Key="BodyColor" Color="LightGray" />
         <SolidColorBrush x:Key="BorderColor" Color="Black" />
+        <SolidColorBrush x:Key="LightColor" Color="Red" />
     </UserControl.Resources>
 
     <Canvas>
@@ -21,5 +22,8 @@
                  Fill="{StaticResource BodyColor}" Stroke="{StaticResource BorderColor}" />
         <Polygon Points="14,25 15,26 16,26 17,25 17,17 14,17"
                  Fill="{StaticResource BodyColor}" Stroke="{StaticResource BorderColor}" />
+        <Ellipse Width="4" Height="4" Fill="{StaticResource ResourceKey=LightColor}" Stroke="{StaticResource ResourceKey=BorderColor}" Canvas.Left="8" Canvas.Top="2"/>
+        <Ellipse Width="4" Height="4" Fill="{StaticResource ResourceKey=LightColor}" Stroke="{StaticResource ResourceKey=BorderColor}" Canvas.Left="14" Canvas.Top="2"/>
+        <Ellipse Width="4" Height="4" Fill="{StaticResource ResourceKey=LightColor}" Stroke="{StaticResource ResourceKey=BorderColor}" Canvas.Left="20" Canvas.Top="2"/>
     </Canvas>
 </base:BaseSprite>
