--- a/SpaceInvaders/View/UI/LabelSprite.xaml
+++ b/SpaceInvaders/View/UI/LabelSprite.xaml
@@ -10,5 +10,5 @@
     d:DesignHeight="16"
     d:DesignWidth="16">
 
-    <TextBlock x:Name="textBlock"/>
+    <TextBlock x:Name="textBlock" TextWrapping="Wrap"/>
 </base:BaseSprite>
