--- a/SpaceInvaders/View/Sprites/Entities/Enemies/BasicLightsDim.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/BasicLightsDim.xaml
@@ -15,7 +15,8 @@
     </UserControl.Resources>
 
     <Canvas>
-        <Rectangle Width="4" Height="8" Fill="{StaticResource LightColor}" Stroke="{StaticResource OutlineColor}"/>
-        <Rectangle Width="4" Height="8" Canvas.Left="8" Fill="{StaticResource LightColor}" Stroke="{StaticResource OutlineColor}"/>
+        <Rectangle Width="4" Height="8" Fill="{StaticResource LightColor}" Stroke="{StaticResource OutlineColor}" />
+        <Rectangle Width="4" Height="8" Canvas.Left="8" Fill="{StaticResource LightColor}"
+                   Stroke="{StaticResource OutlineColor}" />
     </Canvas>
 </base:BaseSprite>
