--- a/SpaceInvaders/View/Sprites/UI/FullHeartSprite.xaml
+++ b/SpaceInvaders/View/Sprites/UI/FullHeartSprite.xaml
@@ -2,7 +2,6 @@
     x:Class="SpaceInvaders.View.Sprites.UI.FullHeartSprite"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SpaceInvaders.View.Sprites.UI"
     xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -13,6 +12,7 @@
     Width="31">
 
     <Canvas>
-        <Polygon Fill="HotPink" Stroke="MediumVioletRed" StrokeThickness="4" Points="16,4 12,0 4,0 0,4 0,16 16,31 31,16 31,4 27,0 20,0"/>
+        <Polygon Fill="HotPink" Stroke="MediumVioletRed" StrokeThickness="4"
+                 Points="16,4 12,0 4,0 0,4 0,16 16,31 31,16 31,4 27,0 20,0" />
     </Canvas>
 </base:BaseSprite>
