--- a/SpaceInvaders/View/Sprites/Entities/Enemies/AggressiveEnemySprite3.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/AggressiveEnemySprite3.xaml
@@ -19,9 +19,12 @@
     </UserControl.Resources>
 
     <Canvas>
-        <local:AggresiveEnemySpriteBase/>
-        <Ellipse Width="5" Height="5" Fill="{StaticResource ResourceKey=DimColor}" Stroke="{StaticResource ResourceKey=BorderColor}" Canvas.Left="6" Canvas.Top="2"/>
-        <Ellipse Width="5" Height="5" Fill="{StaticResource ResourceKey=DimColor}" Stroke="{StaticResource ResourceKey=BorderColor}" Canvas.Left="13" Canvas.Top="2"/>
-        <Ellipse Width="5" Height="5" Fill="{StaticResource ResourceKey=LitColor}" Stroke="{StaticResource ResourceKey=BorderColor}" Canvas.Left="20" Canvas.Top="2"/>
+        <local:AggresiveEnemySpriteBase />
+        <Ellipse Width="5" Height="5" Fill="{StaticResource ResourceKey=DimColor}"
+                 Stroke="{StaticResource ResourceKey=BorderColor}" Canvas.Left="6" Canvas.Top="2" />
+        <Ellipse Width="5" Height="5" Fill="{StaticResource ResourceKey=DimColor}"
+                 Stroke="{StaticResource ResourceKey=BorderColor}" Canvas.Left="13" Canvas.Top="2" />
+        <Ellipse Width="5" Height="5" Fill="{StaticResource ResourceKey=LitColor}"
+                 Stroke="{StaticResource ResourceKey=BorderColor}" Canvas.Left="20" Canvas.Top="2" />
     </Canvas>
 </base:BaseSprite>
