--- a/SpaceInvaders/View/Sprites/Entities/Enemies/BasicLightsLit.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/Enemies/BasicLightsLit.xaml
@@ -2,7 +2,6 @@
     x:Class="SpaceInvaders.View.Sprites.Entities.Enemies.BasicLightsLit"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SpaceInvaders.View.Sprites.Entities.Enemies"
     xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,7 +15,8 @@
     </UserControl.Resources>
 
     <Canvas>
-        <Rectangle Width="4" Height="8" Fill="{StaticResource LightColor}" Stroke="{StaticResource OutlineColor}"/>
-        <Rectangle Width="4" Height="8" Canvas.Left="8" Fill="{StaticResource LightColor}" Stroke="{StaticResource OutlineColor}"/>
+        <Rectangle Width="4" Height="8" Fill="{StaticResource LightColor}" Stroke="{StaticResource OutlineColor}" />
+        <Rectangle Width="4" Height="8" Canvas.Left="8" Fill="{StaticResource LightColor}"
+                   Stroke="{StaticResource OutlineColor}" />
     </Canvas>
 </base:BaseSprite>
