--- a/SpaceInvaders/View/Sprites/Entities/ShieldSegmentSprite.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/ShieldSegmentSprite.xaml
@@ -7,11 +7,20 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="16"
-    d:DesignWidth="16"
+    d:DesignWidth="14"
     Width="16"
     Height="16">
 
+    <UserControl.Resources>
+        <SolidColorBrush x:Key="BaseColor" Color="DarkOrange" />
+        <SolidColorBrush x:Key="OuterColor" Color="Cyan" />
+    </UserControl.Resources>
+
     <Canvas>
-        <Rectangle Width="16" Height="16" Fill="SaddleBrown" />
+        <Polygon Fill="{StaticResource OuterColor}" Points="0,4 7,0 7,16 0,12"/>
+        <Polygon Fill="{StaticResource OuterColor}" Points="0,4 -7,0 -7,16 0,12" Canvas.Left="14"/>
+        <Polygon Fill="{StaticResource BaseColor}" Points="0,3 5,0 5,12 0,9" Canvas.Top="2" Canvas.Left="2"/>
+        <Polygon Fill="{StaticResource BaseColor}" Points="0,3 -5,0 -5,12 0,9" Canvas.Top="2" Canvas.Left="12"/>
+
     </Canvas>
 </base:BaseSprite>
