--- a/SpaceInvaders/View/Sprites/Entities/BossNukeSprite1.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/BossNukeSprite1.xaml
@@ -1,15 +1,15 @@
 ﻿<base:BaseSprite
-    x:Class="SpaceInvaders.View.Sprites.UI.GrazeBarSprite"
+    x:Class="SpaceInvaders.View.Sprites.Entities.BossNukeSprite1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="256"
+    d:DesignHeight="16"
     d:DesignWidth="16"
-    Height="256"
+    Height="16"
     Width="16">
 
-    <Rectangle x:Name="bar" Width="16" Height="256" Fill="LawnGreen" RenderTransformOrigin=".5 1" />
+    <Polygon Points="8,0 9,7 16,8 9,9 8,16 7,9 0,8 7,7" Fill="Orange" Stroke="OrangeRed" />
 </base:BaseSprite>
