--- a/SpaceInvaders/View/Sprites/Entities/PlayerBulletSprite1.xaml
+++ b/SpaceInvaders/View/Sprites/Entities/PlayerBulletSprite1.xaml
@@ -1,15 +1,17 @@
 ﻿<base:BaseSprite
-    x:Class="SpaceInvaders.View.Sprites.UI.GrazeBarSprite"
+    x:Class="SpaceInvaders.View.Sprites.Entities.PlayerBulletSprite"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:base="using:SpaceInvaders.View.Sprites"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="256"
-    d:DesignWidth="16"
-    Height="256"
-    Width="16">
+    d:DesignHeight="8"
+    d:DesignWidth="8"
+    Width="8"
+    Height="8">
 
-    <Rectangle x:Name="bar" Width="16" Height="256" Fill="LawnGreen" RenderTransformOrigin=".5 1" />
+    <Canvas ZIndex="1">
+        <Rectangle Width="8" Height="8" Fill="White" />
+    </Canvas>
 </base:BaseSprite>
