--- a/SpaceInvaders/View/Sprites/UI/GrazeBarFrameSprite.xaml
+++ b/SpaceInvaders/View/Sprites/UI/GrazeBarFrameSprite.xaml
@@ -13,7 +13,8 @@
     Width="24">
 
     <Canvas>
-        <local:GrazeBarSprite x:Name="bar" Canvas.Left="8" Canvas.Top="22"/>
-        <Polygon Points="24 22 12 0 0 22 0 278 12 300 24 278 12 278 12 22" Fill="#555" Stroke="Black" StrokeThickness="2"/>
+        <local:GrazeBarSprite x:Name="bar" Canvas.Left="8" Canvas.Top="22" />
+        <Polygon Points="24 22 12 0 0 22 0 278 12 300 24 278 12 278 12 22" Fill="#555" Stroke="Black"
+                 StrokeThickness="2" />
     </Canvas>
 </base:BaseSprite>
